Fix project title and date styling on mobile

--- a/client/app/projects/projects.css
+++ b/client/app/projects/projects.css
@@ -5,11 +5,16 @@
   border-radius: 5px;
 }
 
-.project-box > h1, .project-box > h3 {
+.project-box > * > h2 {
+  margin-top: 0;
+  padding: 0;
+}
+
+.project-box > h4 {
   margin-top: 0;
 }
 
-.project-box > h1 {
-  padding-bottom: 4px;
-  border-bottom: 1px solid #565656;
+.project-border {
+  margin: 0 0 1em;
+  border-bottom: 1px solid #B5B5B5;
 }
